--- a/enterprise-dashboard/index.html
+++ b/enterprise-dashboard/index.html
@@ -1,13 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>temp_app</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enterprise Dashboard</title>
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Lucide Icons -->
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    }
+                }
+            }
+        }
+    </script>
+</head>
+<body class="bg-gray-50 font-sans text-gray-900">
+
+    <!-- Sidebar -->
+    <div class="hidden md:flex h-screen w-64 bg-slate-900 text-white flex-col fixed left-0 top-0 shadow-xl z-20">
+        <div class="p-6 border-b border-slate-800 flex items-center gap-2">
+            <div class="w-8 h-8 bg-blue-500 rounded-lg flex items-center justify-center font-bold text-lg">E</div>
+            <span class="text-xl font-bold tracking-tight">Enterprise.io</span>
+        </div>
+
+        <nav class="flex-1 overflow-y-auto py-6">
+            <div class="px-4 space-y-2">
+                <!-- Menu Items -->
+                <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group bg-blue-600 text-white shadow-lg shadow-blue-900/20">
+                    <i data-lucide="layout-dashboard" class="w-5 h-5 text-white"></i>
+                    <span class="font-medium">Overview</span>
+                </button>
+                <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
+                    <i data-lucide="shopping-cart" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
+                    <span class="font-medium">Orders</span>
+                </button>
+                <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
+                    <i data-lucide="package" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
+                    <span class="font-medium">Inventory</span>
+                </button>
+                <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
+                    <i data-lucide="bar-chart-2" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
+                    <span class="font-medium">Reports</span>
+                </button>
+                <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
+                    <i data-lucide="settings" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
+                    <span class="font-medium">Settings</span>
+                </button>
+            </div>
+
+            <div class="mt-8 px-6">
+                <p class="text-xs font-semibold text-slate-500 uppercase tracking-wider mb-2">Support</p>
+                <button class="w-full flex items-center gap-3 px-4 py-2 text-slate-400 hover:text-white transition-colors">
+                    <i data-lucide="life-buoy" class="w-5 h-5"></i>
+                    <span>Help Center</span>
+                </button>
+            </div>
+        </nav>
+
+        <div class="p-4 border-t border-slate-800">
+            <button class="w-full flex items-center gap-3 px-4 py-3 text-slate-400 hover:text-red-400 hover:bg-red-950/30 rounded-lg transition-all">
+                <i data-lucide="log-out" class="w-5 h-5"></i>
+                <span>Sign Out</span>
+            </button>
+        </div>
+    </div>
+
+    <!-- Header -->
+    <header class="h-16 bg-white/80 backdrop-blur-md border-b border-gray-200 fixed top-0 right-0 left-0 md:left-64 z-10 px-8 flex items-center justify-between transition-all duration-300">
+        <div class="flex items-center gap-4 w-full max-w-xl">
+            <div class="relative w-full group">
+                <i data-lucide="search" class="absolute left-3 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 group-focus-within:text-blue-500 transition-colors"></i>
+                <input
+                    type="text"
+                    placeholder="Ask anything... e.g., 'Show low-stock items in Delhi'"
+                    class="w-full pl-10 pr-4 py-2 bg-gray-100 border-none rounded-full focus:ring-2 focus:ring-blue-500/50 focus:bg-white transition-all outline-none text-sm"
+                />
+            </div>
+        </div>
+
+        <div class="flex items-center gap-6">
+            <button class="relative p-2 text-gray-500 hover:bg-gray-100 rounded-full transition-colors">
+                <i data-lucide="bell" class="w-6 h-6"></i>
+                <span class="absolute top-1.5 right-2 w-2.5 h-2.5 bg-red-500 rounded-full border-2 border-white"></span>
+            </button>
+
+            <div class="h-8 w-px bg-gray-200"></div>
+
+            <div class="flex items-center gap-3 cursor-pointer hover:opacity-80 transition-opacity">
+                <div class="text-right hidden md:block">
+                    <p class="text-sm font-semibold text-gray-900">Alex Morgan</p>
+                    <p class="text-xs text-gray-500">Ops Manager</p>
+                </div>
+                <div class="w-10 h-10 bg-gradient-to-tr from-blue-500 to-indigo-600 rounded-full flex items-center justify-center text-white font-bold shadow-lg">
+                    AM
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main Content Area -->
+    <main class="pl-0 md:pl-64 pt-16 min-h-screen transition-all duration-300">
+        <div class="p-8 max-w-7xl mx-auto space-y-8 animate-fade-in-up">
+            <div>
+                <h1 class="text-2xl font-bold text-gray-900 tracking-tight">Dashboard Overview</h1>
+                <p class="text-gray-500">Welcome back, Alex. Here's what's happening today.</p>
+            </div>
+
+            <!-- KPI Grid -->
+            <div id="kpi-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
+
+            <div class="grid grid-cols-1 xl:grid-cols-3 gap-6">
+                <div class="xl:col-span-2 space-y-6">
+                    <!-- Trend Chart -->
+                    <div class="bg-white rounded-2xl p-6 shadow-sm border border-gray-100 flex flex-col h-[400px]">
+                        <div class="flex justify-between items-center mb-6">
+                            <div>
+                                <h3 class="text-lg font-bold text-gray-900">Revenue & Forecast</h3>
+                                <p class="text-sm text-gray-500">AI-powered predictive analytics for upcoming week</p>
+                            </div>
+                            <select class="bg-gray-50 border-none text-sm text-gray-600 font-medium rounded-lg py-2 px-4 focus:ring-2 focus:ring-blue-100 outline-none cursor-pointer hover:bg-gray-100 transition-colors">
+                                <option>Last 7 Days</option>
+                                <option>Last 30 Days</option>
+                                <option>This Quarter</option>
+                            </select>
+                        </div>
+                        <div class="flex-1 w-full min-h-0 relative">
+                             <canvas id="revenueChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+                <div class="space-y-6">
+                    <!-- Smart Alerts -->
+                    <div id="smart-alerts"></div>
+                </div>
+            </div>
+
+            <div class="pt-2">
+                 <!-- Inventory Table -->
+                <div id="inventory-table-container"></div>
+            </div>
+        </div>
+    </main>
+
+    <!-- App Scripts -->
+    <script src="assets/js/data.js"></script>
+    <script src="assets/js/charts.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script>
+        // Initialize Icons
+        lucide.createIcons();
+    </script>
+</body>
 </html>
