--- a/enterprise-dashboard/index.html
+++ b/enterprise-dashboard/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enterprise Dashboard</title>
+    <title>Enterprise Stock Prediction</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Chart.js -->
@@ -31,8 +31,8 @@
     <!-- Sidebar -->
     <div class="hidden md:flex h-screen w-64 bg-slate-900 text-white flex-col fixed left-0 top-0 shadow-xl z-20">
         <div class="p-6 border-b border-slate-800 flex items-center gap-2">
-            <div class="w-8 h-8 bg-blue-500 rounded-lg flex items-center justify-center font-bold text-lg">E</div>
-            <span class="text-xl font-bold tracking-tight">Enterprise.io</span>
+            <div class="w-8 h-8 bg-blue-500 rounded-lg flex items-center justify-center font-bold text-lg">S</div>
+            <span class="text-xl font-bold tracking-tight">Stock.io</span>
         </div>
 
         <nav class="flex-1 overflow-y-auto py-6">
@@ -40,19 +40,19 @@
                 <!-- Menu Items -->
                 <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group bg-blue-600 text-white shadow-lg shadow-blue-900/20">
                     <i data-lucide="layout-dashboard" class="w-5 h-5 text-white"></i>
-                    <span class="font-medium">Overview</span>
+                    <span class="font-medium">Market</span>
                 </button>
                 <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
-                    <i data-lucide="shopping-cart" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
-                    <span class="font-medium">Orders</span>
-                </button>
-                <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
-                    <i data-lucide="package" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
-                    <span class="font-medium">Inventory</span>
+                    <i data-lucide="eye" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
+                    <span class="font-medium">Watchlist</span>
                 </button>
                 <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
                     <i data-lucide="bar-chart-2" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
-                    <span class="font-medium">Reports</span>
+                    <span class="font-medium">Screener</span>
+                </button>
+                <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
+                    <i data-lucide="file-text" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
+                    <span class="font-medium">News</span>
                 </button>
                 <button class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
                     <i data-lucide="settings" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
@@ -84,7 +84,7 @@
                 <i data-lucide="search" class="absolute left-3 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 group-focus-within:text-blue-500 transition-colors"></i>
                 <input
                     type="text"
-                    placeholder="Ask anything... e.g., 'Show low-stock items in Delhi'"
+                    placeholder="Search ticker (e.g. NVDA, AAPL)..."
                     class="w-full pl-10 pr-4 py-2 bg-gray-100 border-none rounded-full focus:ring-2 focus:ring-blue-500/50 focus:bg-white transition-all outline-none text-sm"
                 />
             </div>
@@ -114,8 +114,8 @@
     <main class="pl-0 md:pl-64 pt-16 min-h-screen transition-all duration-300">
         <div class="p-8 max-w-7xl mx-auto space-y-8 animate-fade-in-up">
             <div>
-                <h1 class="text-2xl font-bold text-gray-900 tracking-tight">Dashboard Overview</h1>
-                <p class="text-gray-500">Welcome back, Alex. Here's what's happening today.</p>
+                <h1 class="text-2xl font-bold text-gray-900 tracking-tight">Stock Market & Predictions</h1>
+                <p class="text-gray-500">Real-time market analysis and AI-driven forecasts.</p>
             </div>
 
             <!-- KPI Grid -->
@@ -127,13 +127,13 @@
                     <div class="bg-white rounded-2xl p-6 shadow-sm border border-gray-100 flex flex-col h-[400px]">
                         <div class="flex justify-between items-center mb-6">
                             <div>
-                                <h3 class="text-lg font-bold text-gray-900">Revenue & Forecast</h3>
-                                <p class="text-sm text-gray-500">AI-powered predictive analytics for upcoming week</p>
+                                <h3 class="text-lg font-bold text-gray-900">Price Forecast (AAPL)</h3>
+                                <p class="text-sm text-gray-500">AI-powered predictive analytics for next hours</p>
                             </div>
                             <select class="bg-gray-50 border-none text-sm text-gray-600 font-medium rounded-lg py-2 px-4 focus:ring-2 focus:ring-blue-100 outline-none cursor-pointer hover:bg-gray-100 transition-colors">
-                                <option>Last 7 Days</option>
-                                <option>Last 30 Days</option>
-                                <option>This Quarter</option>
+                                <option>1 Day</option>
+                                <option>1 Week</option>
+                                <option>1 Month</option>
                             </select>
                         </div>
                         <div class="flex-1 w-full min-h-0 relative">
