--- a/enterprise-dashboard/news.html
+++ b/enterprise-dashboard/news.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enterprise Stock Prediction</title>
+    <title>Market News - Stock.io</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Mock Data -->
+    <script src="assets/js/data.js"></script>
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <!-- Google Fonts -->
@@ -41,8 +41,8 @@
             <div class="px-4 space-y-2">
                 <!-- Menu Items -->
                 <a href="index.html"
-                    class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group bg-blue-600 text-white shadow-lg shadow-blue-900/20">
-                    <i data-lucide="layout-dashboard" class="w-5 h-5 text-white"></i>
+                    class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
+                    <i data-lucide="layout-dashboard" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
                     <span class="font-medium">Market</span>
                 </a>
                 <a href="watchlist.html"
@@ -56,8 +56,8 @@
                     <span class="font-medium">Screener</span>
                 </a>
                 <a href="news.html"
-                    class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group text-slate-400 hover:bg-slate-800 hover:text-white">
-                    <i data-lucide="file-text" class="w-5 h-5 text-slate-400 group-hover:text-white"></i>
+                    class="w-full flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 group bg-blue-600 text-white shadow-lg shadow-blue-900/20">
+                    <i data-lucide="file-text" class="w-5 h-5 text-white"></i>
                     <span class="font-medium">News</span>
                 </a>
                 <a href="settings.html"
@@ -123,55 +123,31 @@
     <main class="pl-0 md:pl-64 pt-16 min-h-screen transition-all duration-300">
         <div class="p-8 max-w-7xl mx-auto space-y-8 animate-fade-in-up">
             <div>
-                <h1 class="text-2xl font-bold text-gray-900 tracking-tight">Stock Market & Predictions</h1>
-                <p class="text-gray-500">Real-time market analysis and AI-driven forecasts.</p>
+                <h1 class="text-2xl font-bold text-gray-900 tracking-tight">Market News</h1>
+                <p class="text-gray-500">Latest financial headlines and market moving stories.</p>
             </div>
 
-            <!-- KPI Grid -->
-            <div id="kpi-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
-
-            <div class="grid grid-cols-1 xl:grid-cols-3 gap-6">
-                <div class="xl:col-span-2 space-y-6">
-                    <!-- Trend Chart -->
-                    <div class="bg-white rounded-2xl p-6 shadow-sm border border-gray-100 flex flex-col h-[400px]">
-                        <div class="flex justify-between items-center mb-6">
-                            <div>
-                                <h3 class="text-lg font-bold text-gray-900">Price Forecast (AAPL)</h3>
-                                <p class="text-sm text-gray-500">AI-powered predictive analytics for next hours</p>
-                            </div>
-                            <select
-                                class="bg-gray-50 border-none text-sm text-gray-600 font-medium rounded-lg py-2 px-4 focus:ring-2 focus:ring-blue-100 outline-none cursor-pointer hover:bg-gray-100 transition-colors">
-                                <option>1 Day</option>
-                                <option>1 Week</option>
-                                <option>1 Month</option>
-                            </select>
-                        </div>
-                        <div class="flex-1 w-full min-h-0 relative">
-                            <canvas id="revenueChart"></canvas>
-                        </div>
-                    </div>
+            <!-- News Feed Placeholder -->
+            <div class="space-y-4">
+                <div class="bg-white p-6 rounded-xl border border-gray-100 shadow-sm hover:shadow-md transition-shadow">
+                    <span class="text-xs font-bold text-blue-600 bg-blue-50 px-2 py-1 rounded-md">Technology</span>
+                    <h3 class="text-lg font-bold mt-2 text-gray-900">Tech Stocks Rally Ahead of Earnings</h3>
+                    <p class="text-gray-500 mt-1 text-sm">Major tech giants are expected to report strong Q4 earnings...
+                    </p>
+                    <div class="mt-4 text-xs text-gray-400">2 hours ago • Wall St Journal</div>
                 </div>
-                <div class="space-y-6">
-                    <!-- Smart Alerts -->
-                    <div id="smart-alerts"></div>
-                </div>
-            </div>
-
-            <div class="pt-2">
-                <!-- Inventory Table -->
-                <div id="inventory-table-container"></div>
+                <!-- More news items could be added here -->
             </div>
         </div>
     </main>
 
     <!-- App Scripts -->
-    <script src="assets/js/data.js"></script>
-    <script src="assets/js/charts.js"></script>
     <script src="assets/js/search.js"></script>
-    <script src="assets/js/main.js"></script>
     <script>
-        // Initialize Icons
         lucide.createIcons();
+        document.addEventListener('DOMContentLoaded', () => {
+            initSearch();
+        });
     </script>
 </body>
 
